myblog-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myblog-ingress
  namespace: openfaas
  annotations:  #line to be commented for starting tutorial
    kubernetes.io/ingress.class: "nginx"  #line to be commented for starting tutorial
    cert-manager.io/cluster-issuer: "letsencrypt-prod" #line to be commented for starting tutorial or updated using prod
spec:
  tls:  #line to be commented for starting tutorial
  - hosts:  #line to be commented for starting tutorial
    - myblog.pgr095.tk #line to be commented for starting tutorial
    secretName: myblog-tls  #line to be commented for starting tutorial
  rules:
  - host: myblog.pgr095.tk
    http:
      paths:
      - backend:
          serviceName: myblog
          servicePort: 80
